--- a/requirements.txt
+++ b/requirements.txt
@@ -50,8 +50,9 @@ zipp==3.15.0
 proglog==0.1.10
 protobuf==3.19.0
 
-tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
+tensorboard==1.14.0
+# tensorboard==1.15.0
 
 
